--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 
 .header,
 .landing {
-    background-image: url("../images/wallpaperflare.com_wallpaper\ \(1\).jpg");
+    background-image: url("image/wallpaperflare.com_wallpaper\ \(1\).jpg");
     background-image: cover;
     position: relative;
 }
