--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ body {
 
 .header,
 .landing {
-    background-image: url("image/wallpaperflare.com_wallpaper\ \(1\).jpg");
-    background-image: cover;
+/*     background-image: url("image/wallpaperflare.com_wallpaper\ \(1\).jpg"); */
+/*     background-image: cover; */
+    background-color: rgb(42, 42, 42);
     position: relative;
 }
 
