--- a/style.css
+++ b/style.css
@@ -54,6 +54,27 @@ body {
 
 /* END GLOBAL RULES */
 
+/* Customize Scroll-Bar */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: white;
+    box-shadow: 0 0 10px #ddd inset;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: yellow;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(253, 253, 120);
+}
+
+/* Customize Scroll-Bar */
+
 /* A n g l e U p */
 .angleup {
     width: 30px;
